Tested the model. It is soo good!!

--- a/LipNet.ipynb
+++ b/LipNet.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5fa7f368",
+   "id": "873c4608",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dc8dab94",
+   "id": "c7517c95",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c2f5bea3",
+   "id": "7d1ee0b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3d25464a",
+   "id": "ba72f75a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "618bad5e",
+   "id": "c5ee6c57",
    "metadata": {},
    "source": [
     "# Build Data Loading Functions"
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7668a0ba",
+   "id": "03019c18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "788fdb7f",
+   "id": "2f8324ae",
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7e34df0d",
+   "id": "edb5a05c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1652,7 +1652,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b58eac09",
+   "id": "01d78e14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1662,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "15a06552",
+   "id": "24dfba0a",
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "39c057d1",
+   "id": "5d6c9f06",
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "52b4fd94",
+   "id": "14e2c096",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bf6077e5",
+   "id": "c593a515",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "03e7a50d",
+   "id": "b5fbacf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1771,7 +1771,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5640b4e3",
+   "id": "4563d8dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1781,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5985dc6c",
+   "id": "dbcb397a",
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1802,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8f591844",
+   "id": "be00046d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1813,7 +1813,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "aa220ebf",
+   "id": "36add270",
    "metadata": {},
    "outputs": [
     {
@@ -2141,7 +2141,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1577363a",
+   "id": "811a2937",
    "metadata": {},
    "outputs": [
     {
@@ -2172,7 +2172,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "43d9ed38",
+   "id": "e7e2a12f",
    "metadata": {},
    "outputs": [
     {
@@ -2195,7 +2195,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b224b78f",
+   "id": "ff4104d6",
    "metadata": {},
    "outputs": [
     {
@@ -2216,7 +2216,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b380642b",
+   "id": "9c1f8162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2229,7 +2229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59bbf2e5",
+   "id": "babcce44",
    "metadata": {},
    "source": [
     "# Data Pipeline"
@@ -2238,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "06a22959",
+   "id": "47de2504",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2248,7 +2248,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "53b23c8b",
+   "id": "58472c88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2266,7 +2266,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "53192d3a",
+   "id": "e30a5f24",
    "metadata": {},
    "outputs": [
     {
@@ -2287,7 +2287,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "74e08384",
+   "id": "de69d3c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2297,7 +2297,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e452b4c2",
+   "id": "1d26221d",
    "metadata": {},
    "outputs": [
     {
@@ -2318,7 +2318,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "e9f54cd6",
+   "id": "11f9d338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2328,7 +2328,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "b9570e2c",
+   "id": "e016a717",
    "metadata": {},
    "outputs": [
     {
@@ -2965,7 +2965,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ff0d730c",
+   "id": "cf643707",
    "metadata": {},
    "outputs": [
     {
@@ -3063,7 +3063,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "9071fad1",
+   "id": "9686e920",
    "metadata": {},
    "outputs": [
     {
@@ -3097,7 +3097,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "7afe50e3",
+   "id": "6326dec6",
    "metadata": {},
    "outputs": [
     {
@@ -3117,7 +3117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "313b37d3",
+   "id": "30fcee50",
    "metadata": {},
    "source": [
     "# Neural Network"
@@ -3126,7 +3126,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "237d8599",
+   "id": "0850007d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3140,7 +3140,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "bb8bfd54",
+   "id": "27c2687f",
    "metadata": {},
    "outputs": [
     {
@@ -3161,7 +3161,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "66c9e391",
+   "id": "0e7b116a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3198,7 +3198,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "0866e16d",
+   "id": "d97edf3f",
    "metadata": {},
    "outputs": [
     {
@@ -3260,7 +3260,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "d46ef8dd",
+   "id": "2f077e65",
    "metadata": {},
    "outputs": [
     {
@@ -3278,7 +3278,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "1e162d8f",
+   "id": "59c90a51",
    "metadata": {},
    "outputs": [
     {
@@ -3299,7 +3299,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "b9da81bd",
+   "id": "e57b1cf3",
    "metadata": {},
    "outputs": [
     {
@@ -3394,7 +3394,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "1e0715b7",
+   "id": "1545e020",
    "metadata": {},
    "outputs": [
     {
@@ -3422,7 +3422,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "f064da26",
+   "id": "d47a3111",
    "metadata": {},
    "outputs": [
     {
@@ -3443,7 +3443,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "23376bce",
+   "id": "b81d6be6",
    "metadata": {},
    "outputs": [
     {
@@ -3463,7 +3463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e514416",
+   "id": "2f2e442a",
    "metadata": {},
    "source": [
     "# Training"
@@ -3472,7 +3472,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f95bbfbf",
+   "id": "165050fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3487,7 +3487,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "59f213af",
+   "id": "a48ddb67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3507,7 +3507,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "f417d789",
+   "id": "04465080",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3530,7 +3530,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5fdb038d",
+   "id": "573ca7e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3540,7 +3540,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "d59700d1",
+   "id": "4a45f89d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3550,7 +3550,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "58400df2",
+   "id": "93298232",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3560,7 +3560,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "d7c9fff8",
+   "id": "67d5e9f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3571,7 +3571,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "27e7a38b",
+   "id": "743526b2",
    "metadata": {},
    "outputs": [
     {
@@ -3609,7 +3609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab314888",
+   "id": "ae1a0f4d",
    "metadata": {},
    "source": [
     "# Prediction"
@@ -3617,51 +3617,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a45aef3c",
+   "execution_count": 85,
+   "id": "247ff953",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1vWscXs4Vt0a_1IH1-ct2TCgXAZT-N3_Y\n",
+      "To: C:\\Users\\yacoo\\LipReadingDeepLearning\\LipReading\\checkpoints.zip\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████| 94.5M/94.5M [00:13<00:00, 6.86MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['models\\\\checkpoint.index',\n",
+       " 'models\\\\__MACOSX/._checkpoint.index',\n",
+       " 'models\\\\checkpoint.data-00000-of-00001',\n",
+       " 'models\\\\__MACOSX/._checkpoint.data-00000-of-00001',\n",
+       " 'models\\\\checkpoint',\n",
+       " 'models\\\\__MACOSX/._checkpoint']"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://drive.google.com/uc?id=1vWscXs4Vt0a_1IH1-ct2TCgXAZT-N3_Y'\n",
+    "output = 'checkpoints.zip'\n",
+    "gdown.download(url, output, quiet=False)\n",
+    "gdown.extractall('checkpoints.zip', 'models')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "65c6a139",
+   "execution_count": 86,
+   "id": "8e7960a2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.checkpoint.checkpoint.CheckpointLoadStatus at 0x2e6809ca140>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.load_weights('models/checkpoint')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3430d0b4",
+   "execution_count": 87,
+   "id": "8792616d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_data = test.as_numpy_iterator()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a35eb046",
+   "execution_count": 99,
+   "id": "41c8ded2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sample = test_data.next()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9109d4b2",
+   "execution_count": 100,
+   "id": "4ee29149",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 2s 2s/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "yhat = model.predict(sample[0])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4d79bd7e",
+   "execution_count": 101,
+   "id": "10c464b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ REAL TEXT\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=string, numpy=b'bin red by g five again'>,\n",
+       " <tf.Tensor: shape=(), dtype=string, numpy=b'bin green at a six now'>]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('~'*100, 'REAL TEXT')\n",
+    "[tf.strings.reduce_join([num_to_char(word) for word in sentence]) for sentence in sample[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "ec70eb35",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "decoded = tf.keras.backend.ctc_decode(yhat, input_length=[75,75], greedy=True)[0][0].numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "bbc3bdf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ PREDICTIONS\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=string, numpy=b'bin red by g five again'>,\n",
+       " <tf.Tensor: shape=(), dtype=string, numpy=b'bin green at a six now'>]"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('~'*100, 'PREDICTIONS')\n",
+    "[tf.strings.reduce_join([num_to_char(word) for word in sentence]) for sentence in decoded]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1a8514d",
+   "metadata": {},
+   "source": [
+    "# Test on a Video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "1c6aedbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = load_data(tf.convert_to_tensor('.\\\\data\\\\s1\\\\sbia2p.mpg'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "b5e34d3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 1s 1s/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "yhat = model.predict(tf.expand_dims(sample[0],axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "ce6dca56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 75, 41)"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yhat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "615c4b59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ REAL TEXT\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=string, numpy=b'set blue in a two please'>]"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('~'*100, 'REAL TEXT')\n",
+    "[tf.strings.reduce_join([num_to_char(word) for word in sentence]) for sentence in [sample[1]]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "97853cf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decoded = tf.keras.backend.ctc_decode(yhat, input_length=[75], greedy=True)[0][0].numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "418ffc10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ PREDICTIONS\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=string, numpy=b'set blue in a two please'>]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('~'*100, 'PREDICTIONS')\n",
+    "[tf.strings.reduce_join([num_to_char(word) for word in sentence]) for sentence in decoded]"
+   ]
   }
  ],
  "metadata": {
